# eiwd

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  INSTALL.md  LICENSE  PLAN.md  README.md  TESTING.md  e_iwd.spec  meson.build  meson_options.txt
.claude/: settings.local.json
data/: e-module-iwd.edc  meson.build  module.desktop  theme.edc
metadata/: layout.conf
packaging/: README.md  create-release.sh
packaging/arch/: PKGBUILD
packaging/gentoo/: eiwd-0.1.0.ebuild
packaging/profiles/: repo_name
po/: POTFILES.in  meson.build
src/: e_mod_config.c  e_mod_config.h  e_mod_gadget.c  e_mod_gadget.h  e_mod_main.c  e_mod_main.h  e_mod_popup.c  e_mod_popup.h  meson.build
src/iwd/: iwd_adapter.c  iwd_adapter.h  iwd_agent.c  iwd_agent.h  iwd_dbus.c  iwd_dbus.h  iwd_device.c  iwd_device.h  iwd_labels.c  iwd_labels.h  iwd_manager.c  iwd_manager.h  iwd_network.c  iwd_network.h  iwd_props.c  iwd_props.h  iwd_state.c  iwd_state.h
src/ui/: wifi_auth.c  wifi_auth.h  wifi_hidden.c  wifi_hidden.h  wifi_list.c  wifi_list.h  wifi_status.c  wifi_status.h
