# Install desktop file
install_data('module.desktop',
  install_dir: dir_module
)

# TODO: Theme compilation will be added in Phase 6
# edje_cc = find_program('edje_cc', required: false)
# if edje_cc.found()
#   custom_target('theme',
#     input: 'theme.edc',
#     output: 'e-module-iwd.edj',
#     command: [edje_cc, '-id', join_paths(meson.current_source_dir(), 'icons'),
#               '@INPUT@', '@OUTPUT@'],
#     install: true,
#     install_dir: dir_module
#   )
# endif
